<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_image_detail"
            android:layout_gravity="center"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:id="@+id/btn_favorite"
            android:textSize="11sp"
            android:layout_margin="10dp"
            android:background="#00E02626"
            android:layout_gravity="end"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_judul_detail"
            android:layout_marginTop="13dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="23sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/tv_rating_detail"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/tv_vote_detail"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/rating"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/vote"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rilis_detail"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_deskripsi_detail"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            />
    </LinearLayout>

</ScrollView>